--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,18 @@ jobs:
       - id: checkout
         name: Checkout
         uses: actions/checkout@v4
+        with:
+          path: school_angular_nest
 
       - name: Build docker
         run: |
           echo ---Building and starting up docker---
-          docker-compose -f ./school_angular_nest/docker-compose_production.yml up
+          docker compose -f ./school_angular_nest/docker-compose_production.yml up -d
           echo --- Completed test cases ---
 
       - name: Application health check
         run: |
+          docker ps
           docker exec -it nestjs-backend bash
           curl http://localhost:3000
 
