--- a/docker-compose_development.yml
+++ b/docker-compose_development.yml
@@ -2,7 +2,10 @@
 services:
 
   db:
-    image: postgres:latest  # Use the official Postgres 13 image
+    build:
+      context: ./postgres
+      dockerfile: Dockerfile
+    image: jessy9955/school_postgres
     container_name: postgres
     restart: always
     environment:
@@ -27,6 +30,25 @@ services:
       - '5050:80'
     depends_on:
       - db
+
+  # Backend service (NestJS)
+#  backend:
+#    build:
+#      context: ./back-end/school
+#      dockerfile: Dockerfile
+#    container_name: nestjs-backend
+#    restart: always
+#    ports:
+#      - "3000:3000"  # Expose port 3000 for accessing the backend
+#    volumes:
+#      - ./back-end/school:/src  # Mount the local backend directory to the container
+#    environment:
+#      - NODE_ENV=development  # Set the environment to development
+#    command: "npm run start:dev"  # Run the application in development mode
+#    depends_on:
+#      - db  # Wait for the database service to be available
+
+
 
 
 # Named volumes to persist PostgreSQL data
