--- a/docker-compose_production.yml
+++ b/docker-compose_production.yml
@@ -1,8 +1,10 @@
-
+version: "v0.1"
 services:
-
   db:
-    image: postgres:latest  # Use the official Postgres 13 image
+    build:
+      context: ./postgres
+      dockerfile: Dockerfile
+    image: jessy9955/school_postgres
     container_name: postgres
     restart: always
     environment:
@@ -16,23 +18,12 @@ services:
     ports:
       - "5432:5432"  # Expose port 5432 for PostgreSQL
 
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    container_name: nest-pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=pgadmin4
-    ports:
-      - '5050:80'
-    depends_on:
-      - db
-
   # Backend service (NestJS)
   backend:
     build:
       context: ./back-end/school
       dockerfile: Dockerfile
+    image: jessy9955/school_nest
     container_name: nestjs-backend
     restart: always
     ports:
@@ -45,8 +36,6 @@ services:
     command: ["npm", "run", "start:prod"]   # Run the application in development mode
     depends_on:
       - db  # Wait for the database service to be available
-
-
 
 
 # Named volumes to persist PostgreSQL data
