--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,14 +7,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - id: Checkout
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           path: school_angular_nest
 
-      - id: Docker Login
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
@@ -25,10 +23,6 @@ jobs:
           echo ---Building and starting up docker---
           docker compose -f ./school_angular_nest/docker-compose_production.yml build --push
           echo --- Completed test cases ---
-
-      - name: Docker ps
-        run: |
-          docker ps
 
 #      - name: Execute tests in the running services
  #       run: |
