--- a/.github/workflows/deploy-to-heroku.yml
+++ b/.github/workflows/deploy-to-heroku.yml
@@ -12,7 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        name: Install Heroku CLI
+
+      - name: Install Heroku CLI
         run: |
           curl https://cli-assets.heroku.com/install.sh | sh
           heroku --version  # Verify Heroku CLI installation
