--- a/back-end/school/Dockerfile
+++ b/back-end/school/Dockerfile
@@ -1,3 +1,32 @@
+FROM node:22-alpine As unittest
+
+WORKDIR /src
+
+COPY package.json package-lock.json ./
+
+RUN npm ci
+
+COPY . .
+
+RUN npm run test
+
+
+FROM node:22-alpine As development
+
+WORKDIR /src
+
+COPY package.json package-lock.json ./
+
+RUN npm ci
+
+COPY . .
+
+# Expose port 3000
+EXPOSE 3000
+
+# Command to start the app (from the /src directory)
+CMD ["npm", "run", "start:dev"]
+
 # Use official Node.js image
 FROM node:22-alpine As production
 
@@ -8,7 +37,7 @@ WORKDIR /src
 COPY package.json package-lock.json ./
 
 # Install dependencies in /src
-RUN npm ci
+RUN npm ci --only=production
 
 # Copy the source code to the container
 COPY . .
