--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,10 +1,14 @@
 name: Docker Build and Push
-on: [push]
+on:
+  workflow_run:
+    workflows: ["Unit Test"]  # This should be the name of your first workflow
+    types:
+      - completed  # Trigger when the first workflow is completed
 
 jobs:
   build:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
