--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Build and test
         run: |
-          docker build --target unittest myapp:dev .
+          docker build --target unittest -t myapp:dev .
           docker run --rm myapp:dev test
 
 
