--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -8,6 +8,11 @@ on: [push]
 #        - 'back-end/**'
 #        - 'front-end/**'
 
+permissions:
+  contents: read
+  actions: read
+  checks: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,11 +23,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Backend Build
+      - name: Backend Build and test
         run: |
           docker build --target unittest -t myapp:dev ./back-end/school
+          docker run --rm myapp:dev test
 
-      - name: Backend test
+      - name: Test Report
         run: |
-          echo { docker run --rm myapp:dev test } >> $GITHUB_STEP_SUMMARY
+          docker cp $(docker ps -alq):/src/test/report ./test/report
+          echo cat ./test/report/test-report.html >> $GIUHUB_STEP_SUMMARY
+        
+      
+
 
