--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -31,9 +31,7 @@ jobs:
 
       - name: Test Report
         run: |
-          echo mkdir ./test/report
-          docker cp $(docker ps -alq):/src/test/report ./test/report
-          echo cat ./test/report/test-report.html >> $GIUHUB_STEP_SUMMARY
+          echo docker cat ./src/test/report/test-report.html >> $GIUHUB_STEP_SUMMARY
         
       
 
