--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Test Report
         run: |
-          echo docker cat ./src/test/report/test-report.html >> $GIUHUB_STEP_SUMMARY
+          echo docker cat $(docker ps -alq):/src/test/report/test-report.html >> $GITHUB_STEP_SUMMARY
         
       
 
