--- a/back-end/school/Dockerfile
+++ b/back-end/school/Dockerfile
@@ -36,7 +36,7 @@ WORKDIR /src
 COPY package.json package-lock.json ./
 
 # Install dependencies in /src
-RUN npm ci --only=production
+RUN npm ci
 
 # Copy the source code to the container
 COPY . .
