unit test report

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Test Report
         if: failure()
         run: |
+          echo "========== test ============"
           docker exec -it test cat /src/test/report/test-report.html
           exit 1
           
