unit test report

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -27,7 +27,7 @@ jobs:
         continue-on-error: true
         run: |
           docker build --target unittest -t myapp:dev ./back-end/school
-          docker run --rm myapp:dev test
+          docker run --rm myapp:dev --name test
 
       - name: Test Report
         run: |
