--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -33,8 +33,14 @@ jobs:
         run: |
           echo "========== test ============"
           docker ps
-          docker exec -it $(docker ps -alq) cat /src/test/report/test-report.html
-          exit 1
+          docker exec $(docker ps -alq) cat /src/test/report/test-report.html
+          if [ success() ]; then
+            echo "Test passed!"
+          else
+            echo "Test failed!" >&2
+            exit 1  # Exit with failure status
+          fi
+        
           
         
       
