--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -19,6 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          path: ./back-end/school
 
 
       - name: Set up Docker Buildx
@@ -38,7 +40,7 @@ jobs:
           #docker exec -it $(docker ps -alq) pwd
           #docker exec -it $(docker ps -alq) ls
           
-          docker cp $(docker ps -alq):/back-end .
+          docker cp $(docker ps -alq):. .
           ls .
           exit 1
         
