--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -32,7 +32,8 @@ jobs:
         run: |
           echo "========== test ============"
           docker cp $(docker ps -alq):/ .
-          ls back-end
+          ls back-end/school/
+          echo cat back-end/school/test/report/*.html >> "$GITHUB_STEP_SUMMARY"
           exit 1
         
         
