--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -31,8 +31,9 @@ jobs:
       - name: Test Report
         run: |
           echo "========== test ============"
-          docker cp $(docker ps -alq):/ .
-          ls back-end/school/ -a
+          docker cp $(docker ps -alq):/src .
+          ls . -a
+          ls back-end -a
           cat back-end/school/test/report/*.html >> "$GITHUB_STEP_SUMMARY"
           exit 1
         
