--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Test Report
         run: |
           echo "========== test ============"
-          docker cp $(docker ps -alq):/school .
-          ls . -a
-          cat back-end/school/test/report/*.html >> "$GITHUB_STEP_SUMMARY"
+          docker cp $(docker ps -alq):. .
+          ls school -a
+          cat school/test/report/*.html >> "$GITHUB_STEP_SUMMARY"
           exit 1
         
         
