--- a/back-end/school/jest.config.json
+++ b/back-end/school/jest.config.json
@@ -1,13 +1,8 @@
 {
   "reporters": [
-    [
-      "github-actions",
-      {
-        "silent": false
-      }
+      "default",
+      ["<rootDir>/custom-reporter.js"]
     ],
-    "default"
-  ],
   "moduleFileExtensions": [
     "js",
     "json",
