--- a/back-end/school/jest.config.json
+++ b/back-end/school/jest.config.json
@@ -1,8 +1,21 @@
 {
   "reporters": [
-      "default",
-      ["<rootDir>/custom-reporter.js"]
+    "default",
+    [
+      "jest-junit",
+      {
+        "outputDirectory": "./test/report",
+        "outputName": "junit.xml"
+      }
     ],
+    [
+      "jest-html-reporter",
+      {
+        "pageTitle": "Test Report",
+        "outputPath": "/test/report/test-report.html"
+      }
+    ]
+  ],
   "moduleFileExtensions": [
     "js",
     "json",
