--- a/back-end/school/package.json
+++ b/back-end/school/package.json
@@ -45,6 +45,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.1.0",
+    "jest-junit": "^16.0.0",
     "prettier": "^3.4.2",
     "prisma": "^6.5.0",
     "source-map-support": "^0.5.21",
