--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -10,7 +10,7 @@ on: [push]
 
 
 jobs:
-  build:
+  unit-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,6 +29,7 @@ jobs:
         run: |
           echo "========== test ============"
           docker cp $(docker ps -alq):. .
+          ls back-end/school/report
           # cat $(find back-end/ -type f -name test-report.html) >> "$GITHUB_STEP_SUMMARY"
           # exit 1
 
@@ -36,25 +37,21 @@ jobs:
         if: always() # Or use "continue-on-error: true" in previous test step
         with:
           access-token: ${{ secrets.GITHUB_TOKEN }}
-          working-directory: back-end/school/test/report
-
-      - uses: IgnusG/jest-report-action@v2.3.3
-        if: always() # Or use "continue-on-error: true" in previous test step
-        with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
-          working-directory: back-end/school/test/report
+          run-name: unit-test
+          junit-file: junit.xml
 
       - name: Convert HTML to Markdown
         id: html2markdown
         if: always()
         uses: rknj/html2markdown@v0.1.0
         with:
-          html-file: "back-end/school/test/report/test-report.html"
+          html-file: back-end/school/test/report/test-report.html
 
       - name: Show content of generated markdown file
         if: always()
         run: |
-          cat ${{ steps.html2markdown.outputs.markdown-file }} >> "$GITHUB_STEP_SUMMARY"   
+          echo "### test result ###" > "$GITHUB_STEP_SUMMARY"  
+          cat ${{ steps.html2markdown.outputs.markdown-file }} > "$GITHUB_STEP_SUMMARY"   
         
       
 
