unit test reporter

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           echo "========== test ============"
           docker cp $(docker ps -alq):. .
-          ls back-end/school/report
+          ls back-end/school/test
+          mv back-end/school/test/ .
           # cat $(find back-end/ -type f -name test-report.html) >> "$GITHUB_STEP_SUMMARY"
           # exit 1
 
@@ -39,13 +40,14 @@ jobs:
           access-token: ${{ secrets.GITHUB_TOKEN }}
           run-name: unit-test
           junit-file: junit.xml
+          working-directory: .
 
       - name: Convert HTML to Markdown
         id: html2markdown
         if: always()
         uses: rknj/html2markdown@v0.1.0
         with:
-          html-file: back-end/school/test/report/test-report.html
+          html-file: test-report.html
 
       - name: Show content of generated markdown file
         if: always()
