--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -29,8 +29,8 @@ jobs:
         run: |
           echo "========== test ============"
           docker cp $(docker ps -alq):. .
-          ls back-end/school/test
-          mv back-end/school/test/ .
+          ls back-end/school/test/report
+          mv back-end/school/test/report/ .
           # cat $(find back-end/ -type f -name test-report.html) >> "$GITHUB_STEP_SUMMARY"
           # exit 1
 
