--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -30,7 +30,8 @@ jobs:
           echo "========== test ============"
           docker cp $(docker ps -alq):. .
           ls back-end/school/test/report
-          mv back-end/school/test/report/ ./
+          mv back-end/school/test/report/ .
+          ls .
           # cat $(find back-end/ -type f -name test-report.html) >> "$GITHUB_STEP_SUMMARY"
           # exit 1
 
