unit test reporter

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Backend Build and test
         continue-on-error: true
+        id: test_result
         run: |
           docker build --target unittest -t myapp:dev ./back-end/school
           docker run --name test --rm myapp:dev 
@@ -49,19 +50,20 @@ jobs:
         uses: rknj/html2markdown@v0.1.0
         with:
           html-file: report/test-report.html
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Test Markdown
         run: |
           echo "========== Markdown ============"
-          ls .
+          find . -type f -name *.md
 
       - name: Show content of generated markdown file
         if: always()
         run: |
           echo "### test result ###" > "$GITHUB_STEP_SUMMARY"  
-          cat $(find . -type f -name *.md) > "$GITHUB_STEP_SUMMARY"   
+          cat "${{ steps.html2markdown.outputs.markdown-file }}" > "$GITHUB_STEP_SUMMARY"   
         
-      
+      - name: Check on failures
+        if: steps.hello.test_result != '0'
+        run: exit 1
 
 
