--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -20,13 +20,13 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Backend Build and test
-        continue-on-error: true
         id: test_result
         run: |
           docker build --target unittest -t myapp:dev ./back-end/school
           docker run --name test --rm myapp:dev 
 
       - name: Test Report
+        if: always()
         run: |
           echo "========== test ============"
           docker cp $(docker ps -alq):. .
@@ -52,6 +52,7 @@ jobs:
           html-file: report/test-report.html
 
       - name: Test Markdown
+        if: always()
         run: |
           echo "========== Markdown ============"
           find . -type f -name *.md
@@ -63,10 +64,6 @@ jobs:
           echo "### test result ###" > "$GITHUB_STEP_SUMMARY"  
           cat "${{ steps.html2markdown.outputs.markdown-file }}" > "$GITHUB_STEP_SUMMARY"   
         
-      - name: Check on failures
-        if: steps.test_result.conclusion != 'success'
-        run: |
-          exit 1
           
 
 
