--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -20,7 +20,6 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Backend Build and test
-        id: test_result
         run: |
           docker build --target unittest -t myapp:dev ./back-end/school
           docker run --name test --rm myapp:dev 
@@ -37,25 +36,24 @@ jobs:
           # cat $(find back-end/ -type f -name test-report.html) >> "$GITHUB_STEP_SUMMARY"
           # exit 1
 
-      - name: Test Result
+      - name: Test JUnit Report
+        id: junit-report
+        if: always()
         uses: mikepenz/action-junit-report@v5
-        if: always() # Or use "continue-on-error: true" in previous test step
         with:
           report_paths: 'report/junit.xml'
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: JUnit Report to Markdown
+        run: |
+          echo "${{ steps.junit-report.outputs.detailed_summary }}" > "$GITHUB_STEP_SUMMARY"
+
       - name: Convert HTML to Markdown
-        id: html2markdown
         if: always()
+        id: html2markdown
         uses: rknj/html2markdown@v0.1.0
         with:
           html-file: report/test-report.html
-
-      - name: Test Markdown
-        if: always()
-        run: |
-          echo "========== Markdown ============"
-          find . -type f -name *.md
 
       - name: Show content of generated markdown file
         if: always()
