--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -45,6 +45,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: JUnit Report to Markdown
+        if: always()
         run: |
           echo "${{ steps.junit-report.outputs.detailed_summary }}" > "$GITHUB_STEP_SUMMARY"
 
