unit test reporter

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -8,6 +8,9 @@ on: [push]
 #        - 'back-end/**'
 #        - 'front-end/**'
 
+permissions:
+  checks: write
+  pull-requests: write # only required if `comment: true` was enabled
 
 jobs:
   unit-test:
@@ -43,25 +46,15 @@ jobs:
         with:
           report_paths: 'report/junit.xml'
           token: ${{ secrets.GITHUB_TOKEN }}
+          comment: true
 
       - name: JUnit Report to Markdown
         if: always()
         run: |
           echo "### test result ###" > "$GITHUB_STEP_SUMMARY"  
-          echo "${{ steps.detailReport.outputs.detailed_summary }}" > "$GITHUB_STEP_SUMMARY"
+          echo "${{ steps.detailReport.outputs.flaky_summary }}" > "$GITHUB_STEP_SUMMARY"
 
-      - name: Convert HTML to Markdown
-        if: always()
-        id: html2markdown
-        uses: rknj/html2markdown@v0.1.0
-        with:
-          html-file: report/test-report.html
-
-      - name: Show content of generated markdown file
-        if: always()
-        continue-on-error: true
-        run: |
-          cat "${{ steps.html2markdown.outputs.markdown-file }}" > "$GITHUB_STEP_SUMMARY"   
+ 
         
           
 
